# cpp-ctrl

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.MD
1-callables-and-callbacks/: CMakeLists.txt  README.MD  simulating-polymorphism.md
1-callables-and-callbacks/src/: callables_demo.cpp  canvas_drawer.cpp
2-parsers-and-parser-generators/: CMakeLists.txt  Dependencies.MD  README.MD  vcpkg.json
2-parsers-and-parser-generators/src/: value_ctpg.cpp  value_spirit.cpp
2-parsing-with-parser-generators/: README.MD
